--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -8,7 +8,7 @@
     </div>
     <ul class="layui-nav right" lay-filter="">
         <li class="layui-nav-item">
-            <a href="javascript:;">{$loginuser->nick}</a>
+            <a href="javascript:">{$loginuser->nick}</a>
             <dl class="layui-nav-child"> <!-- 二级菜单 -->
                 <dd><a onclick="x_admin_show('修改密码','/admin/my/change_password',600,400)">修改密码</a></dd>
                 <dd><a href="/">返回首页</a></dd>
@@ -24,7 +24,7 @@
     <div id="side-nav">
         <ul id="nav">
             <li>
-                <a href="javascript:;">
+                <a href="javascript:">
                     <i class="iconfont">&#xe726;</i>
                     <cite>用户管理</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
@@ -46,7 +46,7 @@
             </li>
 
             <li>
-                <a href="javascript:;">
+                <a href="javascript:">
                     <i class="iconfont">&#xe723;</i>
                     <cite>题目管理</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
@@ -61,32 +61,26 @@
                 </ul>
             </li>
 
+            {if $is_root}
             <li>
-                <a href="javascript:;">
+                <a href="javascript:">
                     <i class="iconfont">&#xe74e;</i>
                     <cite>比赛/作业</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
                 </a>
                 <ul class="sub-menu">
-                    {if $is_root}
                     <li>
                         <a _href="/admin/contest/contest_list">
                             <i class="iconfont">&#xe74e;</i>
                             <cite>比赛管理</cite>
                         </a>
                     </li>
-                    {/if}
-                    <li>
-                        <a _href="/admin/homework/homework_list">
-                            <i class="iconfont">&#xe74e;</i>
-                            <cite>作业管理</cite>
-                        </a>
-                    </li>
                 </ul>
             </li>
+            {/if}
 
             <li>
-                <a href="javascript:;">
+                <a href="javascript:">
                     <i class="iconfont">&#xe74e;</i>
                     <cite>班级管理</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
@@ -102,7 +96,7 @@
             </li>
 
             <li>
-                <a href="javascript:;">
+                <a href="javascript:">
                     <i class="iconfont">&#xe74e;</i>
                     <cite>辅助工具</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
@@ -119,7 +113,7 @@
 
             {if $is_root}
             <li>
-                <a href="javascript:;">
+                <a href="javascript:">
                     <i class="iconfont">&#xe74e;</i>
                     <cite>首页新闻</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
