refactor: 优化比赛Rank页面加载速度

--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -65,7 +65,7 @@
             <li>
                 <a href="javascript:">
                     <i class="iconfont">&#xe74e;</i>
-                    <cite>比赛/作业</cite>
+                    <cite>比赛</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
                 </a>
                 <ul class="sub-menu">
