feat: 首页新闻增加双语显示

--- a/application/admin/view/index/welcome.html
+++ b/application/admin/view/index/welcome.html
@@ -93,10 +93,10 @@
                     <td><?php echo ini_get('max_execution_time'); ?>s</td></tr>
                 <tr>
                     <th>剩余空间 /</th>
-                    <td>{$free_space}G</td></tr>
+                    <td>{$free_space}</td></tr>
                 <tr>
                     <th>剩余空间 /home</th>
-                    <td>{$free_space_home}G</td></tr>
+                    <td>{$free_space_home}</td></tr>
                 </tbody>
             </table>
         </div>
