--- a/application/home/view/themes/bootstrap/index.html
+++ b/application/home/view/themes/bootstrap/index.html
@@ -5,14 +5,14 @@
 	<div class="row">
 		<div class="col-md-9">
 			<?php $hr_flag = false;?>
-			{volist name="newss" id="news"}
+			{volist name="newsList" id="news"}
 			<?php $news->fk(); ?>
 
 			{if $hr_flag}<hr>{/if}<?php $hr_flag = true;?>
 
 			<div>
-				<h3>{$news->title}</h3>
-				<p>{$news->content}</p>
+				<h3>{$news->getTitle($show_ui_lang)}</h3>
+				<p>{$news->getContent($show_ui_lang)}</p>
 				<!--<p>{$news->user->nick}({$news->user_id})</p>-->
 			</div>
 			{/volist}
