refactor: rename $loginuser to $login_user

--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -8,7 +8,7 @@
     </div>
     <ul class="layui-nav right" lay-filter="">
         <li class="layui-nav-item">
-            <a href="javascript:">{$loginuser->nick}</a>
+            <a href="javascript:">{$login_user->nick}</a>
             <dl class="layui-nav-child"> <!-- 二级菜单 -->
                 <dd><a onclick="x_admin_show('修改密码','/admin/my/change_password',600,400)">修改密码</a></dd>
                 <dd><a href="/">返回首页</a></dd>
