--- a/application/admin/view/index/welcome.html
+++ b/application/admin/view/index/welcome.html
@@ -2,7 +2,7 @@
 {block name="content"}
 <div class="x-body layui-anim">
     <blockquote class="layui-elem-quote">欢迎管理员：
-        <span class="x-red">{$loginuser->nick}</span>！当前时间:<?php echo date('Y-m-d H:i:s',time());?></blockquote>
+        <span class="x-red">{$login_user->nick}</span>！当前时间:<?php echo date('Y-m-d H:i:s',time());?></blockquote>
     <fieldset class="layui-elem-field">
         <legend>数据统计</legend>
         <div>
