--- a/application/admin/view/layout/admin_common.html
+++ b/application/admin/view/layout/admin_common.html
@@ -69,7 +69,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a class="" href="/"><span class="glyphicon glyphicon-home"></span> {$lang.back_to_home}</a></li>
-                <li><a href="/profile"><span class="glyphicon glyphicon-user"></span> {$loginuser->user_id}</a></li>
+                <li><a href="/profile"><span class="glyphicon glyphicon-user"></span> {$login_user->user_id}</a></li>
                 <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> {$lang.logout}</a></li>
             </ul>
         </div>
