--- a/application/admin/view/my/change_password.html
+++ b/application/admin/view/my/change_password.html
@@ -8,7 +8,7 @@
             </label>
             <div class="layui-input-inline">
                 <div class="layui-form-mid layui-word-aux">
-                    {$loginuser->user_id}
+                    {$login_user->user_id}
                 </div>
             </div>
         </div>
@@ -19,7 +19,7 @@
             </label>
             <div class="layui-input-inline">
                 <div class="layui-form-mid layui-word-aux">
-                    {$loginuser->nick}
+                    {$login_user->nick}
                 </div>
             </div>
         </div>
