--- a/application/home/view/common_html/problem_btns.html
+++ b/application/home/view/common_html/problem_btns.html
@@ -1,6 +1,6 @@
 <button type="button" class="btn btn-success" onclick="show_submit_code_modal()">{$lang.submit}</button>
-{if $loginuser}
-<a href="/status?username={$loginuser->user_id}&problem_id={$problem->problem_id}" target="_blank" type="button" class="btn btn-default">{$lang.my_status}</a>
+{if $login_user}
+<a href="/status?username={$login_user->user_id}&problem_id={$problem->problem_id}" target="_blank" type="button" class="btn btn-default">{$lang.my_status}</a>
 {/if}
 
 {if $is_administrator}
